# rss-parser-new

./: README.md  example.env  pyproject.toml  sqlite.db
src/rss-parser/: main.py
src/rss-parser/classes/: db.py  rss_parser.py
